--- a/community/server/src/docs/ops/server-debugging.asciidoc
+++ b/community/server/src/docs/ops/server-debugging.asciidoc
@@ -2,7 +2,7 @@
 = Setup for remote debugging
 
 In order to configure the Neo4j server for remote debugging sessions, the Java debugging parameters need to be passed to the Java process through the configuration.
-They live in the _conf/neo4j-wrapper.properties_ file.
+They live in the _conf/neo4j.conf_ file.
 
 In order to specify the parameters, add a line for the additional Java arguments like this:
 
